<resources>
    <string name="app_name">geoSnapper</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="test_string">Moikkulis moi</string>
    <string name="test_name">Timo Testipää</string>
    <string name="company_name">GeoSnapper Oy</string>
    <string name="lorem_ipsum">
        Architecto perferendis sit dolore rerum consectetur mollitia in sed. Exercitationem maxime totam quidem. Quam assumenda doloremque sit tempore cupiditate et. Autem dicta qui et id dolorum architecto est. Ea harum dolores est officiis aut.
        Facilis dolores quia voluptas dolore ipsa sed. Et necessitatibus architecto deserunt minima voluptatem dolorem. Aut laudantium quam tempora repellat et non molestiae et. Rerum necessitatibus autem ad.
        Perspiciatis quos facere dolorem quo quas est. Sed sed voluptatem deleniti. Quae ut dolore et illo minus natus rerum harum.
        Nihil modi molestias incidunt voluptatem. Consequuntur id aperiam error odit aut molestiae. Aut ipsa aut maxime perspiciatis sit molestiae quasi. Consequatur sed est qui quia rem.
        Nihil et eos et vel. Dolorem autem quisquam impedit iste dolorem natus eos dolores. Provident cum molestiae suscipit sit corrupti omnis. Perferendis placeat ut enim ullam in.
    </string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages LocalStorage -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync LocalStorage -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="upgrade">Upgrade</string>
    <string name="this_is_the_settings_view">This is the Settings View</string>
    <string name="email">Email</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="already_registered_log_in_instead">Already registered? Log in instead!</string>
    <string name="login">Login</string>
    <string name="can_t_login_register_instead">Can\'t login? Register instead!</string>
    <string name="add_geosnap">Add GeoSnap</string>
    <string name="settings">Profile</string>
    <string name="logout">Logout</string>
    <string name="leave_a_geosnap">Leave a GeoSnap</string>
    <string name="show_messages">Show messages</string>
    <string name="thank_you">Thank you</string>
    <string name="select_language">Select Language:</string>
    <string name="back">Back</string>
    <string name="empty_fields">Empty fields are not allowed.</string>
    <string name="passwords_not_same">Passwords are not the same!</string>
    <string name="delete_post">DELETE POST</string>
    <string name="are_you_sure">Are you sure you want to delete the post?</string>
    <string name="delete_success">Post deleted successfully</string>
    <string name="delete_failed">Post deletion failed</string>
    <string name="cancel">Cancel</string>
    <string name="post_update_success">Post updated successfully</string>
    <string name="post_update_failed">Post update failed</string>
    <string name="upgrade_post">Upgrade your post to TIER 1 only at 1€</string>
    <string name="upgrade_post_header">UPGRADE POST</string>
    <string name="buy">Buy</string>
    <string name="post_upgrade_success">Post upgraded successfully</string>
    <string name="post_upgrade_failed">Post upgrade failed</string>
    <string name="getting_location">Getting location</string>
    <string name="please_wait">Please wait</string>
    <string name="get_closer">You have to get closer to open</string>
    <string name="open_post">Tap to open post</string>
    <string name="select_post_view_distance">Select post view distance:</string>
</resources>