<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_coordinator_layout"
    tools:context=".ProfileActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_profile"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Widget.AppCompat.ActionBar"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarProfileView"
            app:collapsedTitleTextColor="@color/black"
            app:expandedTitleTextColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="@color/white"
            app:titleEnabled="true"
            app:titleCollapseMode="scale"
            app:title="${email}"
            android:background="@drawable/fading_bg"
            >

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="270dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:contentDescription="@string/test_string"
                android:focusable="true"
                android:scaleType="center"
                android:src="@drawable/test_avatar"
                app:layout_anchor="@+id/appBarLayout_profile" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayoutProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollViewProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:id="@+id/linearLayoutProfileInner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
        </ScrollView>
        <Button
            android:id="@+id/buttonShowMessages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/show_messages"/>

        <Button
            android:id="@+id/buttonToSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/settings" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/spinnerText"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:text="@string/select_language"
                android:textColor="@color/dark_green" />

            <LinearLayout
                android:id="@+id/linearLayoutSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sliderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:text="@string/select_post_view_distance"
                android:textColor="@color/dark_green" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="50.0" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/back"
                app:layout_anchor="@+id/linearLayoutProfile"
                app:layout_anchorGravity="bottom|center" />
            <Button
                android:id="@+id/btn_logOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/logout"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>